plugins {
    id 'java'
}

group = 'pl.janksiegowy'
version = '0.0.1'

repositories {
    mavenCentral()
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of( 17))
}

bootJar { enabled = false }

dependencies {
    implementation project( ':domain')

    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'

    implementation 'org.apache.xmlgraphics:fop:2.9'

    implementation 'com.opencsv:opencsv:5.9'

    implementation 'org.springframework:spring-oxm:6.1.14'

    implementation 'com.sun.xml.bind:jaxb-impl:4.0.5'
    implementation 'net.sf.saxon:Saxon-HE:10.5' // Saxon-HE (Home Edition)

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}